intro: Fix mis-aligned feature list at intro paget
It resolves github issue #113

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -832,10 +832,7 @@
             margin-left:70px;
             -webkit-box-sizing: border-box;
             -moz-box-sizing: border-box;
-            -o-box-sizing: border-box;
-            -ms-box-sizing: border-box;
             box-sizing: border-box;
-
 
             &:first-child, &:nth-child(4) {
                 margin-left:0;
