--- a/app/assets/stylesheets/less/_reponsive.less
+++ b/app/assets/stylesheets/less/_reponsive.less
@@ -382,7 +382,7 @@
         width: inherit !important;
         li {
             width: 95% !important;
-            margin-top: 0 !important;
+            margin-top: 10px !important;
             margin-left: 0 !important;
         }
     }
